# monoproject

./: .geminiignore  .gitignore  GEMINI.md  README.md  pyproject.toml  ruff.toml
scripts/: daily_commit.sh  generate_daily_plan.py  generate_daily_tasks.py  new_note.sh
